@@ -8,3 +8,8 @@ RUN gradle jar --no-daemon
 FROM flink:1.18.1-java17
 WORKDIR /opt/flink/usrlib
 COPY --from=build /app/build/libs/*.jar flink-anomaly-job.jar
+ENTRYPOINT ["java", \
+  "--add-opens", "java.base/java.util=ALL-UNNAMED", \
+  "--add-opens", "java.base/java.lang=ALL-UNNAMED", \
+  "--add-opens", "java.base/java.time=ALL-UNNAMED", \
+  "-jar", "/opt/flink/usrlib/flink-anomaly-job.jar"]
